[package]
name = "ms-watcher-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.5.0", features = ["full"] }
tower = "0.4.13"
